infrastructure/kustomize_api/base/hemihatchlings-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hemihatchlings-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: hemihatchlings-test.hemi.xyz
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: hemihatchlings-api-service
            port:
              number: 3000
  tls:
  - hosts:
    - hemihatchlings.hemi.xyz
    secretName: hemihatchlings-api-tls
